# Real-estate-app

./: .gitignore  CMakeLists.txt  README.md  config.ini
ConsoleApp/: CMakeLists.txt  ConsoleApp.cpp
ConsoleApp/headers/: AuthMenuView.h  BaseView.h  ClientView.h  DisplayedListedPropertiesView.h  GetAgentListView.h  ListDealsView.h  ListPropertyView.h  MenuView.h  PurchaseOfferView.h  RegisterAgentView.h  RegisterStoreView.h  Utils.h  WelcomeView.h
ConsoleApp/sources/: AuthMenuView.cpp  BaseView.cpp  ClientView.cpp  DisplayedListedPropertiesView.cpp  GetAgentListView.cpp  ListDealsView.cpp  ListPropertyView.cpp  MenuView.cpp  PurchaseOfferView.cpp  RegisterAgentView.cpp  RegisterStoreView.cpp  Utils.cpp  WelcomeView.cpp
Core/: CMakeLists.txt
Core/headers/controllers/: Company.h  ConfigFileReader.h  DisplayListedPropertiesController.h  GetAgentListController.h  ListDealsController.h  ListPropertyController.h  PurchaseOfferController.h  RegisterAgentController.h  RegisterStoreController.h  VisitBookingController.h
Core/headers/controllers/restapi/: AdvertisementController.h  AgentController.h  ClientController.h  HttpResult.h  HttpStatus.h  RestController.h  StoreController.h
Core/headers/controllers/restapi/mappers/: AdvertisementMapper.h  AgentMapper.h  ClientMapper.h  HouseMapper.h  PropertyMapper.h  ResidencyMapper.h  StoreMapper.h
Core/headers/domain/dtos/: DisplayedPropertyDTO.h  DisplayedPropertyMapper.h
Core/headers/domain/model/: Advertisement.h  AdvertisementDTO.h  AdvertisementId.h  Agent.h  AgentDTO.h  AgentId.h  Client.h  ClientId.h  Entity.h  EntityId.h  House.h  HouseDTO.h  Property.h  PropertyDTO.h  PropertyId.h  PurchaseOffer.h  PurchaseOfferId.h  Residency.h  ResidencyDTO.h  Store.h  StoreDTO.h  StoreId.h
Core/headers/domain/repositories/: AdvertisementRepository.h  AgentRepository.h  ClientRepository.h  PurchaseOfferRepository.h  Repository.h  RepositoryFactory.h  StoreRepository.h
Core/headers/domain/services/: AdvertisementService.h  AgentService.h  ClientService.h  PurchaseOfferService.h  StoreService.h
Core/headers/domain/shared/: Date.h  NetworkManager.h  StringUtils.h  User.h  Visit.h  VisitMapper.h  VisitRequestContainer.h
Core/headers/infrastructure/memory/: AdvertisementMemoryRepository.h  AgentMemoryRepository.h  ClientMemoryRepository.h  MemoryRepository.h  MemoryRepositoryFactory.h  PurchaseOfferMemoryRepository.h  StoreMemoryRepository.h
Core/sources/controllers/: Company.cpp  DisplayListedPropertiesController.cpp  GetAgentListController.cpp  ListDealsController.cpp  ListPropertyController.cpp  PurchaseOfferController.cpp  RegisterAgentController.cpp  RegisterStoreController.cpp  VisitBookingController.cpp
Core/sources/controllers/restapi/: AdvertisementController.cpp  AgentController.cpp  ClientController.cpp  HttpResult.cpp  RestController.cpp  StoreController.cpp
Core/sources/controllers/restapi/mappers/: AdvertisementMapper.cpp  AgentMapper.cpp  ClientMapper.cpp  HouseMapper.cpp  PropertyMapper.cpp  ResidencyMapper.cpp  StoreMapper.cpp
Core/sources/domain/: DisplayedPropertyDTO.cpp
Core/sources/domain/model/: Advertisement.cpp  Agent.cpp  Client.cpp  EntityId.cpp  House.cpp  HouseDTO.cpp  Property.cpp  PropertyDTO.cpp  PurchaseOffer.cpp  PurchaseOfferId.cpp  Residency.cpp  ResidencyDTO.cpp  Store.cpp
Core/sources/domain/services/: AdvertisementService.cpp  AgentService.cpp  ClientService.cpp  PurchaseOfferService.cpp  StoreService.cpp
Core/sources/domain/shared/: Date.cpp  NetworkManager.cpp  StringUtils.cpp  User.cpp  Visit.cpp  VisitDTO.cpp  VisitMapper.cpp  VisitRequestContainer.cpp
Core/sources/infrastructure/memory/: AdvertisementMemoryRepository.cpp  AgentMemoryRepository.cpp  ClientMemoryRepository.cpp  MemoryRepositoryFactory.cpp  PurchaseOfferMemoryRepository.cpp  StoreMemoryRepository.cpp
CoreTests/: CMakeLists.txt
CoreTests/domain/model/: AdvertisementAndPropertyTests.cpp  StoreTests.cpp
CoreTests/infrastructure/memory/: StoreMemoryRepositoryTests.cpp
RestAPI/: CMakeLists.txt  RestAPI.cpp
RestAPI/headers/: AdvertisementRouter.h  AgentRouter.h  ClientRouter.h  RouterConfig.h  Server.h  ServerStatusRouter.h  StoreRouter.h
RestAPI/postmanTests/: LETI-ESOFT-DHMS.postman_test_run_advertisements.json  LETI-ESOFT-DHMS.postman_test_run_agents.json  LETI-ESOFT-DHMS.postman_test_run_clients.json  LETI-ESOFT-DHMS.postman_test_run_stores.json
RestAPI/sources/: AdvertisementRouter.cpp  AgentRouter.cpp  ClientRouter.cpp  RouterConfig.cpp  Server.cpp  ServerStatusRouter.cpp  StoreRouter.cpp
docs/: TeamMembersAndTasks.md
docs/(templates)/: TeamMembersAndTasks.md
docs/Sprint1/Global_Artifacts/: DM.puml  FURPS.md  Glossary.md  UCD.puml
docs/Sprint2/Global_Artifacts/: DM.puml  FURPS.md  Glossary.md  UCD.puml
docs/Sprint2/US10/: US10-CD.puml  US10-SD.puml  US10-SSD.puml  US10.md
docs/Sprint2/US11/: US11-CD.puml  US11-DM.puml  US11-SD.puml  US11-SSD.puml  US11.md
docs/Sprint2/US21/: US21-CD.puml  US21-DM.puml  US21-SD.puml  US21-SSD.puml  US21.md
docs/Sprint2/US51/: US51-CD.puml  US51-DM.puml  US51-SD.puml  US51.md
docs/Sprint3/Global_Artifacts/: DM.puml
docs/Sprint3/US20/: US20-CD.puml  US20-SD.puml  US20-SSD.puml  US20.md
docs/Sprint3/US21/: US21-CD.puml  US21-DM.puml  US21-SD.puml  US21.md
docs/Sprint3/US30/: US30-CD.puml  US30-DM.puml  US30-SD.puml  US30-SSD.puml  US30.md
docs/Sprint3/US31/: US31-DM.puml  US31-SD.puml  US31-SSD.puml  US31.md
docs/Sprint3/US40/: US40-CD.puml  US40-DM.puml  US40-SD.puml  US40-SSD.puml  US40.md
docs/Sprint3/US51/: US51-CD.puml  US51-DM.puml  US51-SSD.puml  US51.md
docs/Sprint4/CompanyInit/: CompanyInit.md  CompanyInit.puml
docs/Sprint4/Global_Artifacts/: DM.md  DM.puml  UCD.puml
docs/Sprint4/HTTPFlow/: HTTPFlow.md
docs/Sprint4/US10/: US10-CD-RestAPI.puml  US10-CD.puml  US10-MD.puml  US10-SD-RestAPI-Simplified.puml  US10-SD.puml  US10.md
docs/Sprint4/US11/: US11-CD-RestAPI.puml  US11-SD-RestAPI.puml  US11-SD.puml  US11.md
docs/Sprint4/US20/: US20-CD.puml  US20-DM.puml  US20-SD.puml  US20.md
docs/Sprint4/US21/: US21-CD-RestAPI.puml  (+6 more)
(+34 files in other folders)
