project(Core)

# Add Core library
add_library(Core
        # Source files
        sources/domain/shared/Result.cpp
        sources/domain/shared/StringUtils.cpp
        sources/domain/model/Store.cpp
        sources/domain/shared/User.cpp
        sources/domain/model/Agent.cpp

        # Header files
        headers/domain/shared/Result.h
        headers/domain/shared/StringUtils.h
        headers/domain/model/Store.h
        headers/domain/shared/User.h
        headers/domain/model/Agent.h
        sources/controllers/RegisterAgentController.cpp
        headers/controllers/RegisterAgentController.h
        sources/controllers/Company.cpp
        headers/controllers/Company.h
        sources/controllers/RegisterStoreController.cpp
        headers/controllers/RegisterStoreController.h
        headers/domain/model/Residency.h
        sources/domain/model/Residency.cpp
        headers/domain/model/House.h
        sources/domain/model/House.cpp
        headers/domain/repositories/Repository.h
        headers/domain/repositories/RepositoryFactory.h
        headers/controllers/ConfigFileReader.h
        headers/infrastructure/memory/MemoryRepositoryFactory.h
        headers/domain/model/Entity.h
        headers/domain/model/EntityId.h
        headers/infrastructure/memory/MemoryRepository.h
        headers/domain/model/StoreId.h
        headers/domain/services/StoreService.h
        headers/domain/repositories/StoreRepository.h
        headers/infrastructure/memory/StoreMemoryRepository.h
        sources/domain/model/EntityId.cpp
        sources/infrastructure/memory/StoreMemoryRepository.cpp
        sources/infrastructure/memory/MemoryRepositoryFactory.cpp
        sources/domain/services/StoreService.cpp
        headers/controllers/restapi/HttpStatus.h
        headers/controllers/restapi/HttpResult.h
        headers/controllers/restapi/RestController.h
        headers/controllers/restapi/mappers/StoreMapper.h
        headers/controllers/restapi/StoreController.h
        sources/controllers/restapi/HttpResult.cpp
        sources/controllers/restapi/RestController.cpp
        sources/controllers/restapi/mappers/StoreMapper.cpp
        sources/controllers/restapi/StoreController.cpp
        headers/controllers/restapi/mappers/AdvertisementMapper.h
        headers/controllers/restapi/AdvertisementController.h
        sources/controllers/restapi/AdvertisementController.cpp
        sources/controllers/restapi/mappers/AdvertisementMapper.cpp
        headers/domain/model/Advertisement.h
        headers/domain/model/AdvertisementId.h
        sources/domain/model/Advertisement.cpp
        headers/domain/model/PurchaseOffer.h
        headers/domain/model/PurchaseOfferId.h
        sources/domain/model/PurchaseOffer.cpp
        sources/domain/model/PurchaseOfferId.cpp
        headers/domain/repositories/AdvertisementRepository.h
        headers/infrastructure/memory/AdvertisementMemoryRepository.h
        sources/infrastructure/memory/AdvertisementMemoryRepository.cpp
        headers/domain/services/AdvertisementService.h
        sources/domain/services/AdvertisementService.cpp
        headers/controllers/PurchaseOfferController.h
        sources/controllers/PurchaseOfferController.cpp
        sources/domain/services/PurchaseOfferService.cpp
        headers/domain/services/PurchaseOfferService.h
        headers/domain/repositories/PurchaseOfferRepository.h
        sources/infrastructure/memory/PurchaseOfferMemoryRepository.cpp
        headers/infrastructure/memory/PurchaseOfferMemoryRepository.h
        headers/domain/model/AgentId.h
        headers/domain/repositories/AgentRepository.h
        sources/domain/services/AgentService.cpp
        headers/domain/services/AgentService.h
        sources/infrastructure/memory/AgentMemoryRepository.cpp
        headers/infrastructure/memory/AgentMemoryRepository.h
        sources/controllers/restapi/AgentController.cpp
        headers/controllers/restapi/AgentController.h
        sources/controllers/restapi/mappers/AgentMapper.cpp
        headers/controllers/restapi/mappers/AgentMapper.h
        headers/controllers/restapi/mappers/ClientMapper.h
        headers/controllers/restapi/ClientController.h
        sources/controllers/restapi/mappers/ClientMapper.cpp
        sources/controllers/restapi/ClientController.cpp
        headers/domain/repositories/ClientRepository.h
        headers/domain/model/Client.h
        headers/domain/model/ClientId.h
        headers/domain/services/ClientService.h
        headers/infrastructure/memory/ClientMemoryRepository.h
        sources/domain/model/Client.cpp
        sources/domain/services/ClientService.cpp
        sources/infrastructure/memory/ClientMemoryRepository.cpp
        headers/controllers/ListPropertyController.h
        sources/controllers/ListPropertyController.cpp
        headers/domain/model/PropertyId.h
        sources/domain/model/Property.cpp
        headers/domain/model/PropertyDTO.h
        sources/domain/model/PropertyDTO.cpp
        sources/controllers/restapi/mappers/PropertyMapper.cpp
        headers/controllers/restapi/mappers/PropertyMapper.h
        headers/domain/model/AgentDTO.h
        headers/domain/model/ResidencyDTO.h
        sources/domain/model/ResidencyDTO.cpp
        headers/controllers/restapi/mappers/ResidencyMapper.h
        sources/controllers/restapi/mappers/ResidencyMapper.cpp
        headers/domain/model/HouseDTO.h
        sources/domain/model/HouseDTO.cpp
        headers/controllers/restapi/mappers/HouseMapper.h
        sources/controllers/restapi/mappers/HouseMapper.cpp
        headers/controllers/ListDealsController.h
        headers/domain/model/StoreDTO.h
        headers/domain/model/AdvertisementDTO.h
        sources/controllers/ListDealsController.cpp
        sources/controllers/DisplayListedPropertiesController.cpp
        headers/controllers/DisplayListedPropertiesController.h
        headers/domain/dtos/DisplayedPropertyMapper.h
        headers/domain/dtos/DisplayedPropertyDTO.h
        sources/domain/DisplayedPropertyDTO.cpp
)

# Specify include directories to locate header files correctly
target_include_directories(Core PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/headers
        ${CMAKE_CURRENT_SOURCE_DIR}/headers/domain/shared
)